tests/paczka1/fuzzy1/41959636.err
Error in line 1: az0UIlgYlZ S988 8,5
Error in line 4: S106 A689 13,0
Error in line 12: UocRbee9Qr S140 65,7
Error in line 19: mTIsh6R8ws A689 624,4
Error in line 21: uvfRKdGEWq S106 85,6
Error in line 27: EMeH3rKdtX2 S140 61,2
Error in line 22: mTIsh6R8ws S988 76,9
Error in line 24: az0UIlgYlZ S988 73,4
Error in line 33: mTIsh6R8ws S140 40,1
